Finalizing First Row

--- a/style.css
+++ b/style.css
@@ -137,7 +137,56 @@ main {
 }
 
 .flex-item {
-    border: solid;
+    /* border: solid; */
     /* flex: 1; */
     flex-basis: 31.5%;
+    position: relative;
 }
+
+p {
+    font-size: 13px;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    margin-right: 10px;
+    width: 228px;
+}
+
+.text-over-image {
+    color: white;
+    bottom: 5px;
+    right: 7px;
+    position: absolute;
+    /* width: 228px; */
+    padding-left: 10px;
+    background-color: rgba(144, 144, 144, 0.9);
+}
+
+.text-over-image > h1 {
+    font-size: 14px;
+    font-weight: bold;
+    margin-top: 7px;
+    margin-bottom: 0;
+    margin-right: 10px;
+}
+
+.read-more {
+    float: left;
+}
+
+.read-more > a {
+    color: white;
+    font-size: 13px;
+}
+
+.read-more > a:hover {
+    color: #005CA0;
+    content: bla;
+}
+
+.read-more > a > img {
+    margin-right: 5px;
+}
+
+/* .read-more img {
+    content: url("images\menu_home_blue.png");
+} */
