Finalizing Contact Page

--- a/style.css
+++ b/style.css
@@ -337,6 +337,12 @@ footer a {
     position: absolute;
     top: 7px;
     right: 15px;
+    text-decoration: none;
+}
+
+.flex-item-contact:first-child > nav > ul > li > a:hover {
+    color: #005CA0;
+    text-decoration: underline;
 }
 
 .flex-item-contact:last-child {
@@ -373,6 +379,7 @@ footer a {
 
 #third-row-contact {
     display: flex;
+    justify-content: space-between;
     /* flex-direction: column; */
 }
 
@@ -390,6 +397,25 @@ footer a {
     margin-right: 10px;
 }
 
+#third-row-contact > div:last-child {
+    /* background-color: red; */
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+#third-row-contact > div:last-child > div {
+    background-image: linear-gradient(white, rgb(236, 236, 236));
+    border: 2px solid rgb(236, 236, 236);
+    border-top-right-radius: 25px;
+    /* border-bottom: none; */
+}
+
+#third-row-contact p a {
+    text-decoration: none;
+}
+
 /* #third-row-contact > div:first-child > div > div {
     background-color: red;
     display: flex;
@@ -404,7 +430,21 @@ footer a {
     /* margin-bottom: 0; */
 }
 
-#third-row-contact p {
+#third-row-contact > div:last-child h2 {
+    /* border-bottom: 1px solid #CBCBCB; */
+    width: 250px;
+    border-bottom: 2px solid rgb(236, 236, 236);
+    margin-right: 20px;
+}
+
+#third-row-contact > div:last-child p {
+    font-size: 13px;
+    color: #6D6D6D;
+    padding-bottom: 20px;
+    margin-right: 20px;
+}
+
+#third-row-contact > div:first-child p {
     font-size: 13px;
     font-weight: bold;
     color: #6D6D6D;
@@ -450,4 +490,9 @@ form > textarea {
     font-family: Arial, Helvetica, sans-serif;
     border: 1px solid #808992;
     font-size: 12px;
+}
+
+#third-row-contact div {
+    /* border: solid;
+    background-color: red; */
 }
